# 5_let_app

./: README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
five_let_app/: Dockerfile  OldDockerfile  app.sh  db.sqlite3  manage.py  old_app.sh  pyproject.toml
five_let_app/five_let_app/: asgi.py  settings.py  urls.py  wsgi.py
five_let_app/static/words/js/: app.js
five_let_app/staticfiles/words/css/: styles.css
five_let_app/words/: admin.py  apps.py  models.py  urls.py  views.py
five_let_app/words/migrations/: 0001_initial.py  0002_alter_words_options_alter_words_first_let_and_more.py
five_let_app/words/static/words/js/: app.js
five_let_app/words/templates/: words.html
nginx/: Dockerfile  nginx.conf
src/: 5wDict.txt  App.vue  dictFunc.js  main.js  newFile.js  styles.css
tst_data/: test.html  test.js
