[tool.poetry]
name = "5-let-app"
version = "0.1.0"
description = ""
authors = ["pavel.grishaev <pollxx97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipython = "^8.21.0"
gunicorn = "^22.0.0"
django = "4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
